# fcitx-keyboard

./: CMakeLists.txt  config.h.in  fcitx-keyboard_0.1.0.orig.tar.bz2.delta  fcitx-keyboard_0.1.0.orig.tar.bz2.id
debian/: changelog  control  copyright  rules  watch
im/: CMakeLists.txt  fcitx-compose-data.h  fcitx-keyboard.desc  isocodes.h  keyboard.c  keyboard.h  keyboardconfig.c
po/: CMakeLists.txt  POTFILES.in.in  fcitx-keyboard.pot  zh_CN.po  zh_TW.po
test/: CMakeLists.txt  evdev.extras.xml  evdev.xml  testisocodes.c  testrules.c
xkb/: xkb.c  xkb.h
